iptableslist.txt
# Generated by xtables-save v1.8.2 on Sun Jul 14 10:11:18 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#SSH US
-A PREROUTING -p tcp -m tcp --dport 2231 -j DNAT --to-destination 192.227.252.111:2233
#SSH FR
-A PREROUTING -p tcp -m tcp --dport 2232 -j DNAT --to-destination 92.119.125.189:2233
#SSH IR
-A PREROUTING -p tcp -m tcp --dport 2233 -j DNAT --to-destination 31.40.5.106:2233
#V2RAY US
-A PREROUTING -p tcp -m tcp --dport 2020 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p tcp -m tcp --dport 2021 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p tcp -m tcp --dport 2022 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p tcp -m tcp --dport 2023 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p udp -m udp --dport 2020 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p udp -m udp --dport 2021 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p udp -m udp --dport 2022 -j DNAT --to-destination 192.227.252.111
-A PREROUTING -p udp -m udp --dport 2023 -j DNAT --to-destination 192.227.252.111
#V2RAY FR
-A PREROUTING -p tcp -m tcp --dport 3030 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p tcp -m tcp --dport 3031 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p tcp -m tcp --dport 3032 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p tcp -m tcp --dport 3033 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p udp -m udp --dport 3030 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p udp -m udp --dport 3031 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p udp -m udp --dport 3032 -j DNAT --to-destination 92.119.125.189
-A PREROUTING -p udp -m udp --dport 3033 -j DNAT --to-destination 92.119.125.189
#MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Jul 14 10:11:18 2024
